Feature/returns more detailed neighbours (#19)
* Returns more detailed neighbours

* Update tests
